# TPU_Models

./: $FILE; echo '抓取完成'; ls -l  | cat; echo '--- 前 3 行 ---'; head -n 3  | sed -n '1,50p' | cat; echo '--- 后 3 行 ---'; tail -n 3  | sed -n '1,50p' | cat  .gitignore  CMakeLists.txt  Makefile  analyze_host_time.py  analyze_usbmon_active.py  analyze_usbmon_simple.py  autoCPU_rpi.py  autoCPU_simple.py  autoTPU.py  autoTPU_simple.py  bench_mn_layers_invoke.py  compare_results.py  compare_results_simple.py  detailed_strace_analysis.py  dual_tpu.py  dual_tpu_invoke_concurrent.py  edgetpu_pipeline_ascii.py  edgetpu_select_test.py  interrupt.py  invoke_strace_one.py  list_usb_buses.py  measure_cold_warm_invoke.py  mobilenetv2_timeline_analysis.py  onlyCo_interrupt.py  optimize_usbmon_capture.py  out_seg1_aligned_span.json  overlap_summary_all.txt  plot for combined model.py  plot.py  plot1by1.py  plot_native  plot_native.cpp  quick_overlap_check.py  resnet50_seg1-7_overlaps.txt  rpi5_idle_power_tes.py  run.py  run_benchmark.sh  run_ftrace_usb_model.sh  run_ftrace_usb_tp.sh  (+26 more)
$OUTDIR/: correct_overlap_stdout.txt  io_correct_per_invoke.json
baselines/: combo_io_baseline.json  models_compilation.txt  models_io_baseline.json  models_io_baseline_correct.json  theory_io_combos.json  theory_io_only.json
data/: partial_offchip_schematic.json
five_models/: formula.md
hook_and_track/: Makefile  audit_trace.c  invoke.cpp  ldprobe_gate.c
model/: 1(1).py  1(2).py  1(3).py  1.py
real_time_analysis/: analyze_active_fixed_summary.py  analyze_results_summary.py  measure_four_models.py  run_burst_measurements.py  run_dual_tpu_toggle.py  run_models_local_combo_sim_workflow.py  run_workload_cycles.py  visualize_io_overlap.py
tmp_edgetpu/: libedgetpu1-max_16.0_arm64.deb  libedgetpu1-std_16.0_arm64.deb
(+153 files in other folders)
